# agent-softcatala

./: .env.example  .gitignore  CHANGELOG_ZAI.md  GITHUB_PAGES_SETUP.md  README.md  TRANSLATION_API_FIX_SUMMARY.md  docker-compose.yml  test_zai.py
.github/workflows/: ci.yml  deploy.yml  health-check.yml  tool-execution-tests.yml  translation-api-tests.yml
backend/: .coveragerc  .env.example  DEPENDENCY_FIX_SUMMARY.md  Dockerfile  MIGRATION_GUIDE.md  OPENROUTER_FIX_SUMMARY.md  OPENROUTER_HYBRID_FUNCTION_CALLING.md  OPENROUTER_INTEGRATION.md  README.md  TOOL_CONFIGURATION.md  agent.py  build-final.sh  build-modern.sh  build-python-safe.sh  build-safe.sh  build.sh  langchain_agent.py  main.py  message_history.py  pip.conf  pyproject.toml  pytest.ini  requirements-compatible.txt  requirements-dev.txt  requirements-diagnostic.txt  requirements-final.txt  requirements-minimal.txt  requirements-safe.txt  requirements.txt  run_tests.sh  run_tool_tests.py  start.sh  start_with_telegram.sh  telegram_bot.py  test_tool_execution.py  test_translation_api_integration.py  test_translation_tool.py  test_zai.py  verify_setup.py
backend/models/: __init__.py  logging_wrapper.py  model_manager.py
backend/models/providers/: __init__.py  base_provider.py  hybrid_function_caller.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  zhipu_provider.py
backend/tests/: README.md  README_OLLAMA_FIX_TESTS.md  conftest.py  test_api.py  test_basic.py  test_health.py  test_integration.py  test_minimal.py  test_mocking.py  test_model_manager.py  test_model_manager_integration.py  test_model_manager_logic.py  test_openai_provider.py  test_openrouter_provider.py  test_prompt_template_fix.py  test_realistic.py  test_telegram_debug.py  test_tool_execution_integration.py  test_working.py  test_zhipu_streaming.py
backend/tools/: README_TRANSLATOR.md  __init__.py  base.py  catalan_spell_checker.py  catalan_syllabification.py  catalan_synonyms.py  catalan_translator.py  catalan_verbs.py  langchain_tools.py  test_catalan_verbs.py  web_browser.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  setupTests.ts  types.ts
frontend/src/__tests__/: App.test.tsx  Integration.test.tsx
frontend/src/components/: ChatMessage.css  ChatMessage.tsx  Sidebar.css  Sidebar.tsx  ToolCallDisplay.css  ToolCallDisplay.tsx
frontend/src/components/__tests__/: Sidebar.test.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: transport.ts  utils.ts
frontend/src/utils/: storage.ts
frontend/src/utils/__tests__/: storage.test.ts
