[project]
name = "agent-softcatala-backend"
version = "0.1.0"
description = "LangChain Chat Agent Backend with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.10.0",
    "httpx==0.27.0",
    "python-multipart==0.0.6",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
    # Zhipu AI dependencies
    "httpx-sse==0.4.0",
    "PyJWT==2.8.0",
    # PDF processing
    "PyPDF2==3.0.1",
    # Telegram bot dependency (requires httpx~=0.27)
    "python-telegram-bot==21.0.1",
    # LangChain dependencies (updated for better OpenRouter tool calling support) - all v0.3 compatible
    "langchain-core==0.3.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-ollama==0.2.0",
    "langchain-openai==0.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing dependencies
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    # Code quality and linting
    "flake8==6.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy>=1.0.0",
    # Additional testing utilities
    "freezegun==1.2.2",  # For mocking time/dates
    "responses==0.24.1",  # For mocking HTTP requests
    "factory-boy==3.3.0",  # For test data generation
]

[project.urls]
Homepage = "https://github.com/softcatala/agent-softcatala"
Repository = "https://github.com/softcatala/agent-softcatala.git"
Issues = "https://github.com/softcatala/agent-softcatala/issues"

[tool.uv]
dev-dependencies = [
    # Testing dependencies
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    # Code quality and linting
    "flake8==6.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy>=1.0.0",
    # Additional testing utilities
    "freezegun==1.2.2",  # For mocking time/dates
    "responses==0.24.1",  # For mocking HTTP requests
    "factory-boy==3.3.0",  # For test data generation
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]